Changed favicon & fixed colors that break the Travis

--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -27,9 +27,9 @@ $bright-sun: #fdd63b;
 $casablanca: #f8bb4f;
 $charcoal-grey: #333541;
 $dark-indigo: #0d2857;
-$dusty-grey: #999999;
+$dusty-grey: #999;
 $scorpion: #5b5b5b;
-$white: #ffffff;
+$white: #fff;
 
 $background-footer: $blue-gradient;
 $background-grey: $alabaster;
